--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -4,7 +4,7 @@
 
 @media screen and (max-width: 576px) {
   .main_content {
-    margin: 0 auto;
+    margin: 3rem 0 auto;
     padding: 3rem 2rem 13rem;
   }
 }
