--- a/src/components/list.css
+++ b/src/components/list.css
@@ -1,13 +1,22 @@
-.grid {
+.grid, .game_grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
   align-items: start;
 }
 
+@media screen and (min-width: 200px) {
+  .game_grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 @media screen and (min-width: 600px) {
   .grid {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .game_grid {
+    grid-template-columns: repeat(5, 1fr);
   }
 }
 
@@ -15,10 +24,16 @@
   .grid {
     grid-template-columns: repeat(3, 1fr);
   }
+  .game_grid {
+    grid-template-columns: repeat(7, 1fr);
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  .grid {
-    grid-template-columns: repeat(4, 1fr);
+  .grid, .game2 {
+    grid-template-columns: repeat(4, 1fr) !important;
+  }
+  .game_grid {
+    grid-template-columns: repeat(8, 1fr);
   }
 }
